Added a few things, cleaned up a few things.