@@ -1,5 +1,7 @@
 package com.github.javachaos.chaosdungeons.geometry;
 
+import com.github.javachaos.chaosdungeons.geometry.polygons.Edge;
+import com.github.javachaos.chaosdungeons.geometry.polygons.Vertex;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.RepeatedTest;
 import org.junit.jupiter.api.Test;
@@ -10,6 +12,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,22 +30,22 @@ public class TestVertex {
         // Create a stream of random points
         pointStream = Stream.generate(
                 () -> GenerationUtils.getRandomPoint2D(
-                        0,0,
-                        100,100));
-        points = pointStream.limit(r.nextInt(50)+3).toList();
+                        0, 0,
+                        100, 100));
+        points = pointStream.limit(r.nextInt(50) + 3).collect(Collectors.toList());
         //points = pointStream.limit(10).toList();
     }
 
     @Test
     void testHasEdge() {
-        Edge e = new Edge(new Point2D.Double(0,0), new Point2D.Double(0,1));
-        Edge e1 = new Edge(new Point2D.Double(0,0), new Point2D.Double(1,0));
-        Edge e2 = new Edge(new Point2D.Double(1,1), new Point2D.Double(0,0));
+        Edge e = new Edge(new Point2D.Double(0, 0), new Point2D.Double(0, 1));
+        Edge e1 = new Edge(new Point2D.Double(0, 0), new Point2D.Double(1, 0));
+        Edge e2 = new Edge(new Point2D.Double(1, 1), new Point2D.Double(0, 0));
         List<Point2D> pts = List.of(
-                new Point2D.Double(0,0),
-                new Point2D.Double(1,0),
-                new Point2D.Double(0,1),
-                new Point2D.Double(1,1));
+                new Point2D.Double(0, 0),
+                new Point2D.Double(1, 0),
+                new Point2D.Double(0, 1),
+                new Point2D.Double(1, 1));
         Vertex v = new Vertex(pts);
         assertFalse(v.has(e));
         assertTrue(v.has(e1));
@@ -56,11 +59,11 @@ public class TestVertex {
         // p0 = 90.0 |.__.__.\ p2 = 26.56
         //           p1 = 180.0
         List<Point2D> pts = List.of(
-                new Point2D.Double(0,0),
-                new Point2D.Double(1,0),
-                new Point2D.Double(2,0),
-                new Point2D.Double(0,1),
-                new Point2D.Double(1,1));
+                new Point2D.Double(0, 0),
+                new Point2D.Double(1, 0),
+                new Point2D.Double(2, 0),
+                new Point2D.Double(0, 1),
+                new Point2D.Double(1, 1));
         Vertex quad = new Vertex(pts);
         for (Point2D pt : pts) {
             double angle = quad.find(pt).getAngle();
@@ -72,15 +75,15 @@ public class TestVertex {
     @Test
     void testGetPoints() {
         List<Point2D> pts = List.of(
-                new Point2D.Double(0,0),
-                new Point2D.Double(1,0),
-                new Point2D.Double(0,1),
-                new Point2D.Double(1,1));
+                new Point2D.Double(0, 0),
+                new Point2D.Double(1, 0),
+                new Point2D.Double(0, 1),
+                new Point2D.Double(1, 1));
         Vertex square = new Vertex(List.of(
-                new Point2D.Double(0,0),
-                new Point2D.Double(1,0),
-                new Point2D.Double(0,1),
-                new Point2D.Double(1,1)));
+                new Point2D.Double(0, 0),
+                new Point2D.Double(1, 0),
+                new Point2D.Double(0, 1),
+                new Point2D.Double(1, 1)));
         assertEquals(pts, square.getPoints());
     }
 
@@ -88,12 +91,12 @@ public class TestVertex {
     void testEdgeCases() {
         assertThrows(NullPointerException.class, () -> new Vertex((Point2D) null));
         assertThrows(IllegalArgumentException.class, () -> new Vertex(List.of()));
-        Vertex v = new Vertex(0,0);
+        Vertex v = new Vertex(0, 0);
         v.setNext(null);
         v.setPrevious(new Vertex(1, 1));
         Vertex finalV = v;
         assertThrows(IllegalArgumentException.class, finalV::calculateAngle);
-        v = new Vertex(0,0);
+        v = new Vertex(0, 0);
         v.setNext(new Vertex(1, 1));
         v.setPrevious(null);
         Vertex finalV1 = v;
@@ -177,9 +180,9 @@ public class TestVertex {
     @Test
     void testCalculateAngle() {
         List<Point2D> t = List.of(
-                new Point2D.Double(0,0),
-                new Point2D.Double(1.0,0),
-                new Point2D.Double(0.5,1.0));
+                new Point2D.Double(0, 0),
+                new Point2D.Double(1.0, 0),
+                new Point2D.Double(0.5, 1.0));
 
         Vertex poly = new Vertex(t);
         Vertex a = poly;
@@ -190,18 +193,18 @@ public class TestVertex {
         double theta2 = 63.434948;
         double theta3 = 53.130102;
 
-        assertEquals(a.getAngle(), theta1,1.0e-6);
-        assertEquals(b.getAngle(), theta2,1.0e-6);
-        assertEquals(c.getAngle(), theta3,1.0e-6);
+        assertEquals(a.getAngle(), theta1, 1.0e-6);
+        assertEquals(b.getAngle(), theta2, 1.0e-6);
+        assertEquals(c.getAngle(), theta3, 1.0e-6);
     }
 
     @Test
     void testSquareAngles() {
         List<Point2D> s = List.of(
-                new Point2D.Double(0.0000000000001,0.000000000001),
-                new Point2D.Double(0.000000000001,1.0),
-                new Point2D.Double(1.0,0.000000000001),
-                new Point2D.Double(1.0,1.0));
+                new Point2D.Double(0.0000000000001, 0.000000000001),
+                new Point2D.Double(0.000000000001, 1.0),
+                new Point2D.Double(1.0, 0.000000000001),
+                new Point2D.Double(1.0, 1.0));
 
         Vertex poly = new Vertex(s);
         Vertex a = poly;
@@ -224,16 +227,24 @@ public class TestVertex {
         assertEquals(points.size(), v.size());
     }
 
-    @RepeatedTest(1000)
+    @RepeatedTest(1)
     @Timeout(value = 1000, unit = TimeUnit.MILLISECONDS)
     public void testRemove() {
         // Get a random set of points between [3, 99]
         Vertex v = new Vertex(points);
+        assertThrows(IllegalArgumentException.class, () -> v.remove(-1));
         for (int i = 1; i < points.size(); i++) {
-            v.remove(i);
-            assertEquals(points.size()-i, v.size());
+            v.remove(r.nextInt(points.size()) + 1);
+            assertEquals(points.size() - i, v.size());
         }
         assertEquals(1, v.size());
+        Vertex v2 = new Vertex(points);
+        int j = 0;
+        for (Point2D p : points) {
+            v2.remove(p);
+            assertEquals(points.size() - (j++), v2.size());
+        }
+        assertEquals(1, v2.size());
     }
 
     @Test
